fix align player

--- a/src/styles/page/_startGame.scss
+++ b/src/styles/page/_startGame.scss
@@ -23,7 +23,7 @@
             flex-direction: column;
             
             &.red-container{
-                align-items: flex-start;
+                align-items: flex-end;
             }
 
             .player{
